--- a/f1_python/web_socket/index.html
+++ b/f1_python/web_socket/index.html
@@ -113,12 +113,116 @@
         angularAccelerationZ: <span id="angularAccelerationZ"></span><br />
         frontWheelsAngle: <span id="frontWheelsAngle"></span><br />
     </div>
-    <div class="item3">
-
+    <div class="CarStatusData">
+        carStatusData:  <br /><br />
+            tractionControl: <span id="tractionControl"></span><br />
+            antiLockBrakes: <span id="antiLockBrakes"></span><br />
+            fuelMix: <span id="fuelMix"></span><br />
+            frontBrakeBias:  <span id="frontBrakeBias"></span><br />
+            pitLimiterStatus: <span id="pitLimiterStatus"></span><br />
+            fuelInTank: <span id="fuelInTank"></span><br />
+            fuelCapacity: <span id="fuelCapacity"></span><br />
+            maxRPM: <span id="maxRPM"></span><br />
+            idleRPM: <span id="idleRPM"></span><br />
+            maxGears: <span id="maxGears"></span><br />
+            drsAllowed: <span id="drsAllowed"></span><br />
+            tyresWear: <span id="tyresWear"></span><br />
+            tyreCompound: <span id="tyreCompound"></span><br />
+            tyresDamage: <br />
+                RL: <span id="tyresDamageRL"></span><br />
+                RR: <span id="tyresDamageRR"></span><br />
+                FL: <span id="tyresDamageFL"></span><br />
+                FR: <span id="tyresDamageFR"></span><br />
+            frontLeftWingDamage: <span id="frontLeftWingDamage"></span><br />
+            frontRightWingDamage: <span id="frontRightWingDamage"></span><br />
+            rearWingDamage: <span id="rearWingDamage"></span><br />
+            engineDamage: <span id="engineDamage"></span><br />
+            gearBoxDamage: <span id="gearBoxDamage"></span><br />
+            exhaustDamage: <span id="exhaustDamage"></span><br />
+            vehicleFiaFlags: <span id="vehicleFiaFlags"></span><br />
+            ersStoreEnergy: <span id="ersStoreEnergy"></span><br />
+            ersDeployMode: <span id="ersDeployMode"></span><br />
+            ersHarvestedThisLapMGUK: <span id="ersHarvestedThisLapMGUK"></span><br />
+            ersHarvestedThisLapMGUH: <span id="ersHarvestedThisLapMGUH"></span><br />
+            ersDeployedThisLap: <span id="ersDeployedThisLap"></span><br />
     </div>
-    <div class="item4">4</div>
-    <div class="item5">5</div>
-    <div class="item6">6</div>
+    <div class="LapData/SessionData">
+      lapData:  <br /><br />
+            lastLapTime: <span id="lastLapTime"></span><br />
+            currentLapTime: <span id="currentLapTime"></span><br />
+            bestLapTime: <span id="bestLapTime"></span><br />
+            sector1Time: <span id="sector1Time"></span><br />
+            sector2Time: <span id="sector2Time"></span><br />
+            lapDistance: <span id="lapDistance"></span><br />
+            totalDistance: <span id="totalDistance"></span><br />
+            safetyCarDelta: <span id="safetyCarDelta"></span><br />
+            carPosition: <span id="carPosition"></span><br />
+            currentLapNum: <span id="currentLapNum"></span><br />
+            pitStatus: <span id="pitStatus"></span><br />
+            sector: <span id="sector"></span><br />
+            currentLapInvalid: <span id="currentLapInvalid"></span><br />
+            penalties: <span id="penalties"></span><br />
+            gridPosition: <span id="gridPosition"></span><br />
+            driverStatus: <span id="driverStatus"></span><br />
+            resultStatus: <span id="resultStatus"></span><br /><br /><br />
+
+      SessionData:   <br /><br />
+            weather: <span id="weather"></span><br />
+            trackTemperature: <span id="trackTemperature"></span><br />
+            airTemperature: <span id="airTemperature"></span><br />
+            totalLaps: <span id="totalLaps"></span><br />
+            trackLength: <span id="trackLength"></span><br />
+            sessionType: <span id="sessionType"></span><br />
+            trackId: <span id="trackId"></span><br />
+            era: <span id="era"></span><br />
+            sessionTimeLeft: <span id="sessionTimeLeft"></span><br />
+            sessionDuration: <span id="sessionDuration"></span><br />
+            pitSpeedLimit: <span id="pitSpeedLimit"></span><br />
+            gamePaused: <span id="gamePaused"></span><br />
+            isSpectating: <span id="isSpectating"></span><br />
+            spectatorCarIndex: <span id="spectatorCarIndex"></span><br />
+            sliProNativeSupport: <span id="sliProNativeSupport"></span><br />
+            numMarshalZones: <span id="numMarshalZones"></span><br />
+            marshalZones: <span id="marshalZones"></span><br />
+            safetyCarStatus: <span id="safetyCarStatus"></span><br />
+            networkGame: <span id="networkGame"></span><br />
+    </div>
+    <div class="CarSetupData">
+      carSetups  <br /><br />
+            frontWing: <span id="frontWing"></span><br />
+            rearWing: <span id="rearWing"></span><br />
+            onThrottle: <span id="onThrottle"></span><br />
+            offThrottle: <span id="offThrottle"></span><br />
+            frontCamber: <span id="frontCamber"></span><br />
+            rearCamber: <span id="rearCamber"></span><br />
+            frontToe: <span id="frontToe"></span><br />
+            rearToe: <span id="rearToe"></span><br />
+            frontSuspension: <span id="frontSuspension"></span><br />
+            rearSuspension: <span id="rearSuspension"></span><br />
+            frontAntiRollBar: <span id="frontAntiRollBar"></span><br />
+            rearAntiRollBar: <span id="rearAntiRollBar"></span><br />
+            frontSuspensionHeight: <span id="frontSuspensionHeight"></span><br />
+            rearSuspensionHeight: <span id="rearSuspensionHeight"></span><br />
+            brakePressure: <span id="brakePressure"></span><br />
+            brakeBias: <span id="brakeBias"></span><br />
+            frontTyrePressure: <span id="frontTyrePressure"></span><br />
+            rearTyrePressure: <span id="rearTyrePressure"></span><br />
+            ballast: <span id="ballast"></span><br />
+            fuelLoad: <span id="fuelLoad"></span><br />
+    </div>
+    <div class="ParticipantData/EventData">
+      ParticipantData:   <br /><br />
+        numCars: <span id="numCars"></span><br />
+        aiControlled: <span id="aiControlled"></span><br />
+        driverId: <span id="driverId"></span><br />
+        teamId: <span id="teamId"></span><br />
+        raceNumber: <span id="raceNumber"></span><br />
+        nationality: <span id="nationality"></span><br />
+        name: <span id="name"></span><br /><br /><br />
+
+      EventData:   <br /><br />
+        eventStringCode: <span id="eventStringCode"></span><br />
+    </div>
   </div>
 
 
