--- a/f1_python/web_socket/index.html
+++ b/f1_python/web_socket/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="static/app.css">
 </head>
 <body>
-  <canvas id="packet_canvas"></canvas>
+  <!-- <canvas id="packet_canvas"></canvas> -->
   <br />
 
   packetFormat: <span id="packetFormat"></span><br />
