--- a/f1_python/web_socket/index.html
+++ b/f1_python/web_socket/index.html
@@ -126,7 +126,11 @@
             idleRPM: <span id="idleRPM"></span><br />
             maxGears: <span id="maxGears"></span><br />
             drsAllowed: <span id="drsAllowed"></span><br />
-            tyresWear: <span id="tyresWear"></span><br />
+            tyresWear: <br />
+                RL: <span id="tyresWearRL"></span><br />
+                RR: <span id="tyresWearRR"></span><br />
+                FL: <span id="tyresWearFL"></span><br />
+                FR: <span id="tyresWearFR"></span><br />
             tyreCompound: <span id="tyreCompound"></span><br />
             tyresDamage: <br />
                 RL: <span id="tyresDamageRL"></span><br />
