--- a/f1_python/web_socket/user_car_packets_view.html
+++ b/f1_python/web_socket/user_car_packets_view.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>F1 UDP</title>
-  <link rel="stylesheet" href="static/app.css">
+  <link rel="stylesheet" href="static/user_packets/app.css">
 </head>
 <body>
   <!-- <canvas id="packet_canvas"></canvas> -->
@@ -239,5 +239,5 @@
 
 
 </body>
-<script src="static/app.js"></script>
+<script src="static/user_packets/app.js"></script>
 </html>
