--- a/f1_python/web_socket/map_draw_live.html
+++ b/f1_python/web_socket/map_draw_live.html
@@ -15,9 +15,117 @@
   sessionTime: <span id="sessionTime"></span><br />
   frameIdentifier: <span id="frameIdentifier"></span><br />
   playerCarIndex: <span id="playerCarIndex"></span><br />
-  x: <span id="pos_x"></span><br />
+  <!-- x: <span id="pos_x"></span><br />
   y: <span id="pos_y"></span><br />
-  z: <span id="pos_z"></span><br /><br />
+  z: <span id="pos_z"></span><br /> -->
+
+
+  <div class="grid-container">
+    <div class="Car1">
+      x: <span id="car_1_pos_x"></span><br />
+      y: <span id="car_1_pos_y"></span><br />
+      z: <span id="car_1_pos_z"></span><br />
+    </div>
+    <div class="Car2">
+      x: <span id="car_2_pos_x"></span><br />
+      y: <span id="car_2_pos_y"></span><br />
+      z: <span id="car_2_pos_z"></span><br />
+    </div>
+    <div class="Car3">
+      x: <span id="car_3_pos_x"></span><br />
+      y: <span id="car_3_pos_y"></span><br />
+      z: <span id="car_3_pos_z"></span><br />
+    </div>
+    <div class="Car4">
+      x: <span id="car_4_pos_x"></span><br />
+      y: <span id="car_4_pos_y"></span><br />
+      z: <span id="car_4_pos_z"></span><br />
+    </div>
+    <div class="Car5">
+      x: <span id="car_5_pos_x"></span><br />
+      y: <span id="car_5_pos_y"></span><br />
+      z: <span id="car_5_pos_z"></span><br />
+    </div>
+    <div class="Car6">
+      x: <span id="car_6_pos_x"></span><br />
+      y: <span id="car_6_pos_y"></span><br />
+      z: <span id="car_6_pos_z"></span><br />
+    </div>
+    <div class="Car7">
+      x: <span id="car_7_pos_x"></span><br />
+      y: <span id="car_7_pos_y"></span><br />
+      z: <span id="car_7_pos_z"></span><br />
+    </div>
+    <div class="Car8">
+      x: <span id="car_8_pos_x"></span><br />
+      y: <span id="car_8_pos_y"></span><br />
+      z: <span id="car_8_pos_z"></span><br />
+    </div>
+    <div class="Car9">
+      x: <span id="car_9_pos_x"></span><br />
+      y: <span id="car_9_pos_y"></span><br />
+      z: <span id="car_9_pos_z"></span><br />
+    </div>
+    <div class="Car10">
+      x: <span id="car_10_pos_x"></span><br />
+      y: <span id="car_10_pos_y"></span><br />
+      z: <span id="car_10_pos_z"></span><br />
+    </div>
+    <div class="Car11">
+      x: <span id="car_11_pos_x"></span><br />
+      y: <span id="car_11_pos_y"></span><br />
+      z: <span id="car_11_pos_z"></span><br />
+    </div>
+    <div class="Car12">
+      x: <span id="car_12_pos_x"></span><br />
+      y: <span id="car_12_pos_y"></span><br />
+      z: <span id="car_12_pos_z"></span><br />
+    </div>
+    <div class="Car13">
+      x: <span id="car_13_pos_x"></span><br />
+      y: <span id="car_13_pos_y"></span><br />
+      z: <span id="car_13_pos_z"></span><br />
+    </div>
+    <div class="Car14">
+      x: <span id="car_14_pos_x"></span><br />
+      y: <span id="car_14_pos_y"></span><br />
+      z: <span id="car_14_pos_z"></span><br />
+    </div>
+    <div class="Car15">
+      x: <span id="car_15_pos_x"></span><br />
+      y: <span id="car_15_pos_y"></span><br />
+      z: <span id="car_15_pos_z"></span><br />
+    </div>
+    <div class="Car16">
+      x: <span id="car_16_pos_x"></span><br />
+      y: <span id="car_16_pos_y"></span><br />
+      z: <span id="car_16_pos_z"></span><br />
+    </div>
+    <div class="Car17">
+      x: <span id="car_17_pos_x"></span><br />
+      y: <span id="car_17_pos_y"></span><br />
+      z: <span id="car_17_pos_z"></span><br />
+    </div>
+    <div class="Car18">
+      x: <span id="car_18_pos_x"></span><br />
+      y: <span id="car_18_pos_y"></span><br />
+      z: <span id="car_18_pos_z"></span><br />
+    </div>
+    <div class="Car19">
+      x: <span id="car_19_pos_x"></span><br />
+      y: <span id="car_19_pos_y"></span><br />
+      z: <span id="car_19_pos_z"></span><br />
+    </div>
+    <div class="Car20">
+      x: <span id="car_20_pos_x"></span><br />
+      y: <span id="car_20_pos_y"></span><br />
+      z: <span id="car_20_pos_z"></span><br />
+    </div>
+  </div>
+
+
+
+
 
   <canvas id="packet_canvas" width="100%" height="100%"></canvas>
 
