--- a/f1_python/web_socket/map_draw_live.html
+++ b/f1_python/web_socket/map_draw_live.html
@@ -14,105 +14,145 @@
   sessionUID: <span id="sessionUID"></span><br />
   sessionTime: <span id="sessionTime"></span><br />
   frameIdentifier: <span id="frameIdentifier"></span><br />
-  playerCarIndex: <span id="playerCarIndex"></span><br />
+  playerCarIndex: <span id="playerCarIndex"></span><br /><br />
 
   <div class="grid-container">
-    <div class="Car1">
+    <div class="Car1" border-style="solid" border-color="green">
+      Car1<br />
+      carPosition: <span id="car_1_pos"></span><br />
       x: <span id="car_1_pos_x"></span><br />
       y: <span id="car_1_pos_y"></span><br />
       z: <span id="car_1_pos_z"></span><br />
     </div>
-    <div class="Car2">
+    <div class="Car2" border-style="solid" border-color="grey">
+      Car2<br />
+      carPosition: <span id="car_2_pos"></span><br />
       x: <span id="car_2_pos_x"></span><br />
       y: <span id="car_2_pos_y"></span><br />
       z: <span id="car_2_pos_z"></span><br />
     </div>
-    <div class="Car3">
+    <div class="Car3" border-style="solid" border-color="yellow">
+      Car3<br />
+      carPosition: <span id="car_3_pos"></span><br />
       x: <span id="car_3_pos_x"></span><br />
       y: <span id="car_3_pos_y"></span><br />
       z: <span id="car_3_pos_z"></span><br />
     </div>
-    <div class="Car4">
+    <div class="Car4" border-style="solid" border-color="black">
+      Car4<br />
+      carPosition: <span id="car_4_pos"></span><br />
       x: <span id="car_4_pos_x"></span><br />
       y: <span id="car_4_pos_y"></span><br />
       z: <span id="car_4_pos_z"></span><br />
     </div>
-    <div class="Car5">
+    <div class="Car5" border-style="solid" border-color="brown">
+      Car5<br />
+      carPosition: <span id="car_5_pos"></span><br />
       x: <span id="car_5_pos_x"></span><br />
       y: <span id="car_5_pos_y"></span><br />
       z: <span id="car_5_pos_z"></span><br />
     </div>
-    <div class="Car6">
+    <div class="Car6" border-style="solid" border-color="red">
+      Car6<br />
+      carPosition: <span id="car_6_pos"></span><br />
       x: <span id="car_6_pos_x"></span><br />
       y: <span id="car_6_pos_y"></span><br />
       z: <span id="car_6_pos_z"></span><br />
     </div>
-    <div class="Car7">
+    <div class="Car7" border-style="solid" border-color="blue">
+      Car7<br />
+      carPosition: <span id="car_7_pos"></span><br />
       x: <span id="car_7_pos_x"></span><br />
       y: <span id="car_7_pos_y"></span><br />
       z: <span id="car_7_pos_z"></span><br />
     </div>
-    <div class="Car8">
+    <div class="Car8" border-style="solid" border-color="orange">
+      Car8<br />
+      carPosition: <span id="car_8_pos"></span><br />
       x: <span id="car_8_pos_x"></span><br />
       y: <span id="car_8_pos_y"></span><br />
       z: <span id="car_8_pos_z"></span><br />
     </div>
-    <div class="Car9">
+    <div class="Car9" border-style="solid" border-color="purple">
+      Car9<br />
+      carPosition: <span id="car_9_pos"></span><br />
       x: <span id="car_9_pos_x"></span><br />
       y: <span id="car_9_pos_y"></span><br />
       z: <span id="car_9_pos_z"></span><br />
     </div>
-    <div class="Car10">
+    <div class="Car10" border-style="solid" border-color="pink">
+      Car10<br />
+      carPosition: <span id="car_10_pos"></span><br />
       x: <span id="car_10_pos_x"></span><br />
       y: <span id="car_10_pos_y"></span><br />
       z: <span id="car_10_pos_z"></span><br />
     </div>
-    <div class="Car11">
+    <div class="Car11" background-color="green">
+      Car11<br />
+      carPosition: <span id="car_11_pos"></span><br />
       x: <span id="car_11_pos_x"></span><br />
       y: <span id="car_11_pos_y"></span><br />
       z: <span id="car_11_pos_z"></span><br />
     </div>
-    <div class="Car12">
+    <div class="Car12" background-color="grey">
+      Car12<br />
+      carPosition: <span id="car_12_pos"></span><br />
       x: <span id="car_12_pos_x"></span><br />
       y: <span id="car_12_pos_y"></span><br />
       z: <span id="car_12_pos_z"></span><br />
     </div>
-    <div class="Car13">
+    <div class="Car13" background-color="yellow">
+      Car13<br />
+      carPosition: <span id="car_13_pos"></span><br />
       x: <span id="car_13_pos_x"></span><br />
       y: <span id="car_13_pos_y"></span><br />
       z: <span id="car_13_pos_z"></span><br />
     </div>
-    <div class="Car14">
+    <div class="Car14" background-color="black" color="white">
+      Car14<br />
+      carPosition: <span id="car_14_pos"></span><br />
       x: <span id="car_14_pos_x"></span><br />
       y: <span id="car_14_pos_y"></span><br />
       z: <span id="car_14_pos_z"></span><br />
     </div>
-    <div class="Car15">
+    <div class="Car15" background-color="brown" color="white">
+      Car15<br />
+      carPosition: <span id="car_15_pos"></span><br />
       x: <span id="car_15_pos_x"></span><br />
       y: <span id="car_15_pos_y"></span><br />
       z: <span id="car_15_pos_z"></span><br />
     </div>
-    <div class="Car16">
+    <div class="Car16" background-color="red">
+      Car16<br />
+      carPosition: <span id="car_16_pos"></span><br />
       x: <span id="car_16_pos_x"></span><br />
       y: <span id="car_16_pos_y"></span><br />
       z: <span id="car_16_pos_z"></span><br />
     </div>
-    <div class="Car17">
+    <div class="Car17" background-color="blue" color="white">
+      Car17<br />
+      carPosition: <span id="car_17_pos"></span><br />
       x: <span id="car_17_pos_x"></span><br />
       y: <span id="car_17_pos_y"></span><br />
       z: <span id="car_17_pos_z"></span><br />
     </div>
-    <div class="Car18">
+    <div class="Car18" background-color="orange">
+      Car18<br />
+      carPosition: <span id="car_18_pos"></span><br />
       x: <span id="car_18_pos_x"></span><br />
       y: <span id="car_18_pos_y"></span><br />
       z: <span id="car_18_pos_z"></span><br />
     </div>
-    <div class="Car19">
+    <div class="Car19" background-color="purple" color="white">
+      Car19<br />
+      carPosition: <span id="car_19_pos"></span><br />
       x: <span id="car_19_pos_x"></span><br />
       y: <span id="car_19_pos_y"></span><br />
       z: <span id="car_19_pos_z"></span><br />
     </div>
-    <div class="Car20">
+    <div class="Car20" background-color="pink">
+      Car20<br />
+      carPosition: <span id="car_20_pos"></span><br />
       x: <span id="car_20_pos_x"></span><br />
       y: <span id="car_20_pos_y"></span><br />
       z: <span id="car_20_pos_z"></span><br />
