--- a/f1_python/web_socket/map_draw_live.html
+++ b/f1_python/web_socket/map_draw_live.html
@@ -17,142 +17,142 @@
   playerCarIndex: <span id="playerCarIndex"></span><br /><br />
 
   <div class="grid-container">
-    <div class="Car1" border-style="solid" border-color="green">
+    <div id="Car1" class="car" border-style="solid" border-color="green">
       Car1<br />
-      carPosition: <span id="car_1_pos"></span><br />
+      carPosition: <span class="position" id="car_1_pos"></span><br />
       x: <span id="car_1_pos_x"></span><br />
       y: <span id="car_1_pos_y"></span><br />
       z: <span id="car_1_pos_z"></span><br />
     </div>
-    <div class="Car2" border-style="solid" border-color="grey">
+    <div id="Car2" class="car" border-style="solid" border-color="grey">
       Car2<br />
-      carPosition: <span id="car_2_pos"></span><br />
+      carPosition: <span class="position" id="car_2_pos"></span><br />
       x: <span id="car_2_pos_x"></span><br />
       y: <span id="car_2_pos_y"></span><br />
       z: <span id="car_2_pos_z"></span><br />
     </div>
-    <div class="Car3" border-style="solid" border-color="yellow">
+    <div id="Car3" class="car" border-style="solid" border-color="yellow">
       Car3<br />
-      carPosition: <span id="car_3_pos"></span><br />
+      carPosition: <span class="position" id="car_3_pos"></span><br />
       x: <span id="car_3_pos_x"></span><br />
       y: <span id="car_3_pos_y"></span><br />
       z: <span id="car_3_pos_z"></span><br />
     </div>
-    <div class="Car4" border-style="solid" border-color="black">
+    <div id="Car4" class="car" border-style="solid" border-color="black">
       Car4<br />
-      carPosition: <span id="car_4_pos"></span><br />
+      carPosition: <span class="position" id="car_4_pos"></span><br />
       x: <span id="car_4_pos_x"></span><br />
       y: <span id="car_4_pos_y"></span><br />
       z: <span id="car_4_pos_z"></span><br />
     </div>
-    <div class="Car5" border-style="solid" border-color="brown">
+    <div id="Car5" class="car" border-style="solid" border-color="brown">
       Car5<br />
-      carPosition: <span id="car_5_pos"></span><br />
+      carPosition: <span class="position" id="car_5_pos"></span><br />
       x: <span id="car_5_pos_x"></span><br />
       y: <span id="car_5_pos_y"></span><br />
       z: <span id="car_5_pos_z"></span><br />
     </div>
-    <div class="Car6" border-style="solid" border-color="red">
+    <div id="Car6" class="car" border-style="solid" border-color="red">
       Car6<br />
-      carPosition: <span id="car_6_pos"></span><br />
+      carPosition: <span class="position" id="car_6_pos"></span><br />
       x: <span id="car_6_pos_x"></span><br />
       y: <span id="car_6_pos_y"></span><br />
       z: <span id="car_6_pos_z"></span><br />
     </div>
-    <div class="Car7" border-style="solid" border-color="blue">
+    <div id="Car7" class="car" border-style="solid" border-color="blue">
       Car7<br />
-      carPosition: <span id="car_7_pos"></span><br />
+      carPosition: <span class="position" id="car_7_pos"></span><br />
       x: <span id="car_7_pos_x"></span><br />
       y: <span id="car_7_pos_y"></span><br />
       z: <span id="car_7_pos_z"></span><br />
     </div>
-    <div class="Car8" border-style="solid" border-color="orange">
+    <div id="Car8" class="car" border-style="solid" border-color="orange">
       Car8<br />
-      carPosition: <span id="car_8_pos"></span><br />
+      carPosition: <span class="position" id="car_8_pos"></span><br />
       x: <span id="car_8_pos_x"></span><br />
       y: <span id="car_8_pos_y"></span><br />
       z: <span id="car_8_pos_z"></span><br />
     </div>
-    <div class="Car9" border-style="solid" border-color="purple">
+    <div id="Car9" class="car" border-style="solid" border-color="purple">
       Car9<br />
-      carPosition: <span id="car_9_pos"></span><br />
+      carPosition: <span class="position" id="car_9_pos"></span><br />
       x: <span id="car_9_pos_x"></span><br />
       y: <span id="car_9_pos_y"></span><br />
       z: <span id="car_9_pos_z"></span><br />
     </div>
-    <div class="Car10" border-style="solid" border-color="pink">
+    <div id="Car10" class="car" border-style="solid" border-color="pink">
       Car10<br />
-      carPosition: <span id="car_10_pos"></span><br />
+      carPosition: <span class="position" id="car_10_pos"></span><br />
       x: <span id="car_10_pos_x"></span><br />
       y: <span id="car_10_pos_y"></span><br />
       z: <span id="car_10_pos_z"></span><br />
     </div>
-    <div class="Car11" background-color="green">
+    <div id="Car11" class="car" background-color="green">
       Car11<br />
-      carPosition: <span id="car_11_pos"></span><br />
+      carPosition: <span class="position" id="car_11_pos"></span><br />
       x: <span id="car_11_pos_x"></span><br />
       y: <span id="car_11_pos_y"></span><br />
       z: <span id="car_11_pos_z"></span><br />
     </div>
-    <div class="Car12" background-color="grey">
+    <div id="Car12" class="car" background-color="grey">
       Car12<br />
-      carPosition: <span id="car_12_pos"></span><br />
+      carPosition: <span class="position" id="car_12_pos"></span><br />
       x: <span id="car_12_pos_x"></span><br />
       y: <span id="car_12_pos_y"></span><br />
       z: <span id="car_12_pos_z"></span><br />
     </div>
-    <div class="Car13" background-color="yellow">
+    <div id="Car13" class="car" background-color="yellow">
       Car13<br />
-      carPosition: <span id="car_13_pos"></span><br />
+      carPosition: <span class="position" id="car_13_pos"></span><br />
       x: <span id="car_13_pos_x"></span><br />
       y: <span id="car_13_pos_y"></span><br />
       z: <span id="car_13_pos_z"></span><br />
     </div>
-    <div class="Car14" background-color="black" color="white">
+    <div id="Car14" class="car" background-color="black" color="white">
       Car14<br />
-      carPosition: <span id="car_14_pos"></span><br />
+      carPosition: <span class="position" id="car_14_pos"></span><br />
       x: <span id="car_14_pos_x"></span><br />
       y: <span id="car_14_pos_y"></span><br />
       z: <span id="car_14_pos_z"></span><br />
     </div>
-    <div class="Car15" background-color="brown" color="white">
+    <div id="Car15" class="car" background-color="brown" color="white">
       Car15<br />
-      carPosition: <span id="car_15_pos"></span><br />
+      carPosition: <span class="position" id="car_15_pos"></span><br />
       x: <span id="car_15_pos_x"></span><br />
       y: <span id="car_15_pos_y"></span><br />
       z: <span id="car_15_pos_z"></span><br />
     </div>
-    <div class="Car16" background-color="red">
+    <div id="Car16" class="car" background-color="red">
       Car16<br />
-      carPosition: <span id="car_16_pos"></span><br />
+      carPosition: <span class="position" id="car_16_pos"></span><br />
       x: <span id="car_16_pos_x"></span><br />
       y: <span id="car_16_pos_y"></span><br />
       z: <span id="car_16_pos_z"></span><br />
     </div>
-    <div class="Car17" background-color="blue" color="white">
+    <div id="Car17" class="car" background-color="blue" color="white">
       Car17<br />
-      carPosition: <span id="car_17_pos"></span><br />
+      carPosition: <span class="position" id="car_17_pos"></span><br />
       x: <span id="car_17_pos_x"></span><br />
       y: <span id="car_17_pos_y"></span><br />
       z: <span id="car_17_pos_z"></span><br />
     </div>
-    <div class="Car18" background-color="orange">
+    <div id="Car18" class="car" background-color="orange">
       Car18<br />
-      carPosition: <span id="car_18_pos"></span><br />
+      carPosition: <span class="position" id="car_18_pos"></span><br />
       x: <span id="car_18_pos_x"></span><br />
       y: <span id="car_18_pos_y"></span><br />
       z: <span id="car_18_pos_z"></span><br />
     </div>
-    <div class="Car19" background-color="purple" color="white">
+    <div id="Car19" class="car" background-color="purple" color="white">
       Car19<br />
-      carPosition: <span id="car_19_pos"></span><br />
+      carPosition: <span class="position" id="car_19_pos"></span><br />
       x: <span id="car_19_pos_x"></span><br />
       y: <span id="car_19_pos_y"></span><br />
       z: <span id="car_19_pos_z"></span><br />
     </div>
-    <div class="Car20" background-color="pink">
+    <div id="Car20" class="car" background-color="pink">
       Car20<br />
-      carPosition: <span id="car_20_pos"></span><br />
+      carPosition: <span class="position" id="car_20_pos"></span><br />
       x: <span id="car_20_pos_x"></span><br />
       y: <span id="car_20_pos_y"></span><br />
       z: <span id="car_20_pos_z"></span><br />
